--- a/q.html
+++ b/q.html
@@ -13,7 +13,7 @@
 
     // Read URL query string (?id=23)
     const params = new URLSearchParams(window.location.search);
-    const id = params.get("id");
+    const id = params.get("i");
 
     // Do the redirect if the ID exists
     if (destinations[id]) {
