--- a/book.html
+++ b/book.html
@@ -105,7 +105,7 @@
         </div>
 
         <div style="display:flex; justify-content:center;">
-          <img class="cover" src="assets/bookcover.jpg" alt="Book cover: EWGTB" />
+          <img class="cover" src="assets/bookCoverWeb.jpg" alt="Book cover: EWGTB" />
         </div>
       </header>
 
