--- a/book.html
+++ b/book.html
@@ -110,7 +110,7 @@
           <h1>Field Guide Of All The Birds We Found One Year In The United States</h1>
           <p class="tagline">Two brothers travel across the United States in a used minivan on a mission to find as many bird species as they can in a single year.</p>
           <div class="btns">
-            <a class="btn primary" href="https://www.amazon.com/dp/XXXXXXXX" target="_blank" rel="noopener">Buy on Amazon</a>
+            <a class="btn primary" href="https://www.amazon.com/dp/B0FLW3W2WD?ref=ppx_yo2ov_dt_b_fed_asin_title" target="_blank" rel="noopener">Buy on Amazon</a>
             <a class="btn" href="https://www.barnesandnoble.com/w/XXXXXXXX" target="_blank" rel="noopener">Buy on B&amp;N</a>
           </div>
           <p class="meta">First edition • Paperback • Full color • 223 pages • ISBN: 979-8-218741-63-1</p>
