--- a/book.html
+++ b/book.html
@@ -111,7 +111,7 @@
           <p class="tagline">Two brothers travel across the United States in a used minivan on a mission to find as many bird species as they can in a single year.</p>
           <div class="btns">
             <a class="btn primary" href="https://www.amazon.com/dp/B0FLW3W2WD?ref=ppx_yo2ov_dt_b_fed_asin_title" target="_blank" rel="noopener">Buy on Amazon</a>
-            <a class="btn" href="https://www.barnesandnoble.com/w/XXXXXXXX" target="_blank" rel="noopener">Buy on B&amp;N</a>
+            <a class="btn" href="https://www.barnesandnoble.com/w/field-guide-of-all-the-birds-we-found-one-year-in-the-united-states-quentin-reiser/1148024337;jsessionid=099F3CF5C795AE6A74DDB34B10299128.prodny_store01-atgap12?ean=9798218741631" target="_blank" rel="noopener">Buy on B&amp;N</a>
           </div>
           <p class="meta">First edition • Paperback • Full color • 223 pages • ISBN: 979-8-218741-63-1</p>
         </div>
